Add url attribute and change validations

--- a/app/views/photos/index.html.haml
+++ b/app/views/photos/index.html.haml
@@ -1,4 +1,5 @@
 - @photos.each do |photo|
   .photo
+    = image_tag photo.url, alt: photo.title
     %h2.title #{photo.title}
     %p.description #{photo.description}
