--- a/app/views/photos/new.html.haml
+++ b/app/views/photos/new.html.haml
@@ -1,4 +1,4 @@
-= form_for @photo, action: "create" do |f|
+= form_for [@collection, @photo], action: "create" do |f|
   .form_field
     %label{for: 'photo[title]'} Nombre de la fotografia
     = f.text_field :title
