--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -4,4 +4,5 @@
         .mosaico
             = link_to(collection) do
                 .mosaico__picture
-                    = image_tag(collection.photos.last.url, alt: collection.photos.first.title)
+                    - unless collection.photos.empty?
+                        = image_tag(collection.photos.last.url, alt: collection.photos.first.title)
