Add login and only one admin can be created

--- a/app/assets/stylesheets/components/molecules/_branding.scss
+++ b/app/assets/stylesheets/components/molecules/_branding.scss
@@ -5,6 +5,7 @@
         
     padding-top: 20px;
     padding-bottom: 20px;
+    position: relative;
     
     .no-link {
        text-decoration: none;
