--- a/app/assets/stylesheets/components/molecules/_main.scss
+++ b/app/assets/stylesheets/components/molecules/_main.scss
@@ -1,3 +1,6 @@
 @import "menu.scss";
 @import "branding.scss";
 @import "hamburguer.scss";
+@import "login.scss";
+@import "forms.scss";
+@import "thumbnail.scss";
