--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,5 +8,8 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     = render "shared/header"
+    %p.notice= notice
+    %p.alert= alert
+
     = yield
     = render "shared/footer"
