--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -5,6 +5,10 @@
   %a.no-link{href:"/"}
     .one-page__branding__title Gordián
     .one-page__branding__sub-title Memories that last
+    .login
+      - if admin_signed_in?
+        %p.login__action--profile= "Hola #{current_admin.email}"
+        = link_to("Salir", destroy_admin_session_path, method: :delete, class: ['.login__action--exit'])
 
 %button.c-hamburger.c-hamburger--rot
   .span toggle menu
