Add style to photos and buttons to create collections and events

--- a/app/assets/stylesheets/components/_mosaico.scss
+++ b/app/assets/stylesheets/components/_mosaico.scss
@@ -2,7 +2,8 @@
     @include outer-container;
     @include row;
     @include fill-parent;
-
+    position: relative;
+    
     &__title {
         padding-top: 30px;
         font-size: 2em;
