--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,8 +1,11 @@
 - @events.each do |event|
-  .mosaicos
-    %h2.mosaicos__title Bodas
-    - event.collections.each do |collection|
-      .mosaico
-        = link_to(collection) do
-          .mosaico__picture
-            = image_tag(collection.photos.last.url, alt: collection.photos.first.title)
+  .events--relative
+    - if admin_signed_in?
+      = link_to "Crear colleción", new_event_path, class: "button button--add"
+    .mosaicos
+      %h2.mosaicos__title Bodas
+      - event.collections.each do |collection|
+        .mosaico
+          = link_to(collection) do
+            .mosaico__picture
+              = image_tag(collection.photos.last.url, alt: collection.photos.first.title)
