Show pugholder when the collection is empty

--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -8,3 +8,5 @@
                 .mosaico__picture
                     - unless collection.photos.empty?
                         = image_tag(collection.photos.last.url, alt: collection.photos.first.title)
+                    - else
+                        = image_tag("http://placepu.gs/500/300", alt: "No hay imagenes en esta colleción")
