--- a/app/views/events/new.html.haml
+++ b/app/views/events/new.html.haml
@@ -6,7 +6,11 @@
     = f.text_area :description, class: ["form__input--textarea"]
     = label_tag("Collecciones a incluir", nil, class: ["form__label"])
     = collection_check_boxes(:event, :collections, @collections, :id, :title) do | b|
-      = b.label(class: ["thumbnail"], style: "background-image: url('#{b.object.photos.last.url}')") {b.check_box + content_tag(:p, b.text, class: 'thumbnail__title')}
-    = button_tag(type: 'submit', class: 'submit') do
-      Crear evento
-      %span.submit__icon
+      - unless b.object.photos.empty?
+        = b.label(class: ["thumbnail"], style: "background-image: url('#{b.object.photos.last.url}')") {b.check_box + content_tag(:p, b.text, class: 'thumbnail__title')}
+      - else
+        = b.label(class: ["thumbnail"], style: "background-image: url('http://placepu.gs/500/300')") {b.check_box + content_tag(:p, b.text, class: 'thumbnail__title')}
+
+  = button_tag(type: 'submit', class: 'submit') do
+    Crear evento
+    %span.submit__icon
