--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,8 +1,9 @@
 - pages = %w(portafolio eventos paquetes conoceme contacto)
 
-
 .one-page__branding
+
   %a.no-link{href:"/"}
+    = image_tag("isologo-1.png",  class: 'one-page__branding__image')
     .one-page__branding__title Gordián
     .one-page__branding__sub-title Memories that last
     .login
