--- a/app/assets/stylesheets/molecules/_branding.scss
+++ b/app/assets/stylesheets/molecules/_branding.scss
@@ -28,5 +28,10 @@
         font-size: 0.8em;
         margin-top: 3px;
         letter-spacing: 4px;
+        background-color: red;
+    }
+
+    &__image {
+        @include grid-column(3);
     }
 }
