--- a/app/assets/stylesheets/components/_main.scss
+++ b/app/assets/stylesheets/components/_main.scss
@@ -1,5 +1,6 @@
 @import 'molecules/main.scss';
 @import 'one-page.scss';
+@import "footer.scss";
 @import 'bio.scss';
 @import 'plans.scss';
 @import 'mosaico.scss';
@@ -8,4 +9,5 @@
 @import 'events.scss';
 @import 'collections.scss';
 @import 'photos.scss';
+@import 'schools.scss';
 @import 'signs.scss';
