--- a/app/assets/stylesheets/components/molecules/_branding.scss
+++ b/app/assets/stylesheets/components/molecules/_branding.scss
@@ -6,6 +6,7 @@
     padding-top: 20px;
     padding-bottom: 20px;
     position: relative;
+    background-color: #00180f;
     
     .no-link {
        text-decoration: none;
@@ -32,9 +33,18 @@
     }
 
     &__image {
-      @include span-columns(1.4);
-      margin-left: auto;
+      @include span-columns(1.9);
+      margin-left: 2.5em;
       margin-right: auto;
       float: none;
+    }
+
+    &__loggin-button{
+      font-size: 1em;
+      padding: .7em 1.5em;
+      border-radius: 7px;
+      background-color: #21bf45;
+      box-shadow: inset 0 0 0 0 rgba(34,36,38,.15);
+      color: #fff;
     }
 }
