--- a/app/views/schools/index.html.haml
+++ b/app/views/schools/index.html.haml
@@ -1,2 +1,23 @@
-%section.container
-  %h1= @msg
+%h1= @msg
+
+%h2 Nuestros clientes
+%section.container.schools
+  %div.schools_brand
+    = image_tag("BINE-logo.png",  class: 'schools_brand-logo')
+    %p.schools_brand-name Benemérito Instituto Normal del Estado
+
+  %div.schools_brand
+    = image_tag("BINE-logo.png",  class: 'schools_brand-logo')
+    %p.schools_brand-name Benemérito Instituto Normal del Estado
+
+  %div.schools_brand
+    = image_tag("CENCH-logo.png",  class: 'schools_brand-logo')
+    %p.schools_brand-name Centro Escolar Niños Heroes de Chapultepec
+
+  %div.schools_brand
+    = image_tag("CENCH-logo.png",  class: 'schools_brand-logo')
+    %p.schools_brand-name Centro Escolar Niños Heroes de Chapultepec
+
+  %div.schools_brand
+    = image_tag("BINE-logo.png",  class: 'schools_brand-logo')
+    %p.schools_brand-name Benemérito Instituto Normal del Estado
