--- a/app/views/schools/index.html.haml
+++ b/app/views/schools/index.html.haml
@@ -1,6 +1,7 @@
-%h1= @msg
+%section.jumbotron
+  %h1= @msg
+  %h2 Nuestros clientes
 
-%h2 Nuestros clientes
 %section.container.schools
   %div.schools_brand
     = image_tag("BINE-logo.png",  class: 'schools_brand-logo')
