--- a/app/assets/stylesheets/components/_schools.scss
+++ b/app/assets/stylesheets/components/_schools.scss
@@ -7,6 +7,7 @@
     justify-content: space-around;
     text-align: center;
     align-items: center;
+    margin-bottom: 2em;
 
     &-logo{
       margin: 1em 2em;
