--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,9 +1,8 @@
 .footer{
   @include row;
-  background-color: #00180f;
+  background-color: #172d25;
   color: #F0F0F0;
   margin-top: 2em;
-  position:fixed;
   left:0px;
   bottom:0px;
   height:80px;
