--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,5 +1,8 @@
 %section.jumbotron
-  %h2 Nuestros clientes
+  %h1 Generación 2017
+  %h2 Grupo A
+  %button Expandir
+  %button Descargar
 
 .events--relative
   .mosaicos
