--- a/app/assets/stylesheets/components/molecules/_branding.scss
+++ b/app/assets/stylesheets/components/molecules/_branding.scss
@@ -6,7 +6,10 @@
     padding-top: 20px;
     padding-bottom: 20px;
     position: relative;
-    background-color: #00180f;
+    background: linear-gradient(90deg,#000403 0,#172d25 25%,#0d352d);
+    -webkit-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.55);
+    -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.55);
+    box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.55);
     
     .no-link {
        text-decoration: none;
@@ -33,18 +36,39 @@
     }
 
     &__image {
-      @include span-columns(1.9);
+      @include span-columns(1.5);
       margin-left: 2.5em;
       margin-right: auto;
       float: none;
+      position: absolute;
+
     }
 
     &__loggin-button{
-      font-size: 1em;
-      padding: .7em 1.5em;
-      border-radius: 7px;
-      background-color: #21bf45;
-      box-shadow: inset 0 0 0 0 rgba(34,36,38,.15);
-      color: #fff;
+      @include shift(10);
+      background-color: #dfdfdf;
+      border: none;
+      border-radius: .4em;
+      box-sizing: border-box;
+      color: #212;
+      cursor: pointer;
+      display: inline-block;
+      font-size: .95em;
+      font-weight: 700;
+      padding: .6em .8em .8em;
+      text-decoration: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      -webkit-tap-highlight-color: transparent;
+      -webkit-user-select: none;
+      user-select: none;
+      -webkit-transition: .2s;
+      transition: .2s;
+      vertical-align: middle;
+      box-shadow: inset 0 -.25em rgba(0,0,0,.3);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      -webkit-appearance: none;
     }
 }
