--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,12 +1,13 @@
 %section.jumbotron
   %h1 Generación 2017
   %h2 Grupo A
-  %button Expandir
-  %button Descargar
+  %div.jumbotron_buttons
+    %a.jumbotron_buttons-item Expandir
+    %a.jumbotron_buttons-item Descargar
 
 .events--relative
   .mosaicos
-    %h2.mosaicos__title Generacion
+    %h2.mosaicos__title Alumnos
     .mosaico
       .mosaico__picture
         = image_tag("http://placepu.gs/500/300", alt: "No hay imagenes en esta colleción")
