--- a/app/views/schools/index.html.haml
+++ b/app/views/schools/index.html.haml
@@ -3,22 +3,22 @@
   %h2 Nuestros clientes
 
 %section.container.schools
-  %div.schools_brand
-    = image_tag("BINE-logo.png",  class: 'schools_brand-logo')
+  %a.schools_brand{href:"http://localhost:3000/admins/sign_in"}
+    = image_tag("BINE-logo.png",  class: 'schools_brand-logo', href:"http://localhost:3000/admins/sign_in")
     %p.schools_brand-name Benemérito Instituto Normal del Estado
 
-  %div.schools_brand
-    = image_tag("BINE-logo.png",  class: 'schools_brand-logo')
+  %a.schools_brand{href:"http://localhost:3000/admins/sign_in"}
+    = image_tag("BINE-logo.png",  class: 'schools_brand-logo', href:"http://localhost:3000/admins/sign_in")
     %p.schools_brand-name Benemérito Instituto Normal del Estado
 
-  %div.schools_brand
+  %a.schools_brand{href:"http://localhost:3000/admins/sign_in"}
+    = image_tag("CENCH-logo.png",  class: 'schools_brand-logo', href:"http://localhost:3000/admins/sign_in")
+    %p.schools_brand-name Centro Escolar Niños Heroes de Chapultepec
+
+  %a.schools_brand{href:"http://localhost:3000/admins/sign_in"}
     = image_tag("CENCH-logo.png",  class: 'schools_brand-logo')
     %p.schools_brand-name Centro Escolar Niños Heroes de Chapultepec
 
-  %div.schools_brand
-    = image_tag("CENCH-logo.png",  class: 'schools_brand-logo')
-    %p.schools_brand-name Centro Escolar Niños Heroes de Chapultepec
-
-  %div.schools_brand
-    = image_tag("BINE-logo.png",  class: 'schools_brand-logo')
+  %a.schools_brand{href:"http://localhost:3000/admins/sign_in"}
+    = image_tag("BINE-logo.png",  class: 'schools_brand-logo', href:"http://localhost:3000/admins/sign_in")
     %p.schools_brand-name Benemérito Instituto Normal del Estado
