--- a/app/assets/stylesheets/components/_schools.scss
+++ b/app/assets/stylesheets/components/_schools.scss
@@ -8,6 +8,7 @@
     text-align: center;
     align-items: center;
     margin-bottom: 2em;
+    text-decoration: none;
 
     &-logo{
       margin: 1em 2em;
@@ -17,6 +18,7 @@
 
     &-name{
       font-size: 2em;
+      color: #000;
     }
   }
 
