--- a/app/assets/stylesheets/components/molecules/_jumbotron.scss
+++ b/app/assets/stylesheets/components/molecules/_jumbotron.scss
@@ -1,4 +1,5 @@
 .jumbotron{
+  @include span-columns(12);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,7 +13,9 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-
+  vertical-align: middle;
+  text-align: center;
+  position: relative;
 
   h1{
     font-size: 5em;
@@ -22,7 +25,40 @@
   h2{
     font-size: 2em;
   }
+  &_buttons{
+    @include shift(9);
+    position: absolute;
+    bottom: 3%;
+    right: 3%;
 
+    &-item{
+      background-color: #dfdfdf;
+      border: none;
+      border-radius: .4em;
+      box-sizing: border-box;
+      color: #212;
+      cursor: pointer;
+      display: inline-block;
+      font-size: .95em;
+      font-weight: 700;
+      padding: .6em .8em .8em;
+      text-decoration: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      -webkit-tap-highlight-color: transparent;
+      -webkit-user-select: none;
+      user-select: none;
+      -webkit-transition: .2s;
+      transition: .2s;
+      vertical-align: middle;
+      box-shadow: inset 0 -.25em rgba(0,0,0,.3);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      -webkit-appearance: none;
+  }
+
+  }
 }
 
 
