--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -8,7 +8,7 @@
       - if admin_signed_in?
         %p.login__action--profile= "Hola #{current_admin.email}"
         = link_to("Salir", destroy_admin_session_path, method: :delete, class: ['.login__action--exit'])
-  %button.one-page__branding__loggin-button Entrar
+  %a.one-page__branding__loggin-button{href:"http://localhost:3000/admins/sign_in"} Entrar
 %button.c-hamburger.c-hamburger--rot
   .span toggle menu
 /
