Views to create schools

--- a/app/assets/stylesheets/components/_schools.scss
+++ b/app/assets/stylesheets/components/_schools.scss
@@ -1,3 +1,9 @@
+.schools-container {
+  @include outer-container;
+  padding-top: 50px;
+}
+
+
 .schools{
   display: flex;
   justify-content: space-around;
