--- a/app/assets/stylesheets/components/molecules/_popup.scss
+++ b/app/assets/stylesheets/components/molecules/_popup.scss
@@ -1,61 +1,109 @@
+//colors
+$black_75: rgba(0,0,0,0.75);
+$black_100: rgba(0,0,0,1);
+$color_zeus_70_approx: rgba(36, 31, 31, 0.7);
+$alabaster: #fafafa;
+$black_80: rgba(0,0,0,0.8);
+$white: #fff;
+
+//fonts
+$font_0: Arial;
+$font_1: Sans-Serif;
+
 .popup {
   z-index: 5;
-  width:100%;
-  height:100%;
-  display:none;
+  width: 100%;
+  height: 100%;
+  display: none;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  position:fixed;
-  top:0px;
-  left:0px;
-  background:rgba(0,0,0,0.75);
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: $black_75;
+
+  &_image{
+    display: block;
+    @include outer-container(100%);
+    max-width: 90%;
+    padding-top: 2em;
+  }
+
+  &-arrow{
+    transition: ease 0.25s all;
+    border-radius: 1000px;
+    text-decoration: none;
+    font-family: $font_0, $font_1;
+    font-size: 2em;
+    text-align: center;
+    line-height: 100%;
+    color: $white;
+
+    &-previous{
+      @include  span-columns(6, block-collapse);
+      position: absolute;
+      left: 0;
+      top: 50%;
+      text-align: left;
+      padding-left: 1em;
+    }
+    &-next{
+      @include span-columns(6, block-collapse);
+      position: absolute;
+      right: 0;
+      top: 50%;
+      text-align: right;
+      padding-right: 1em;
+    }
+  }
 
   &_inner {
     z-index: 10;
-    left:0px;
-    bottom:0px;
-    width:100%;
-    padding:40px;
-    -webkit-transform:translate(0%, -50%);
-    transform:translate(0%, -50%);
-    box-shadow:0px 3px 7px rgba(0,0,0,1);
-    background:rgba(36, 31, 31, 0.7);
-    color: #fafafa;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 40px;
+    box-shadow: 0 3px 7px $black_100;
+    background: $color_zeus_70_approx;
+    color: $alabaster;
 
-    &-title{
+    &-title {
+      @include span-columns(5.5);
+      @include shift(.5);
+
       font-size: 2em;
       font-weight: 700;
     }
-
-    &-data{
-
+    &-data {
+      @include span-columns(3.5);
+      @include shift(2.5);
     }
-  }
-  &_close {
-    width:30px;
-    height:30px;
-    margin:20px 20px 0 0;
-    display:inline-block;
-    position:absolute;
-    top:0px;
-    right:0px;
-    transition:ease 0.25s all;
-    -webkit-transform:translate(50%, -50%);
-    transform:translate(50%, -50%);
-    border-radius:1000px;
-    background:rgba(0,0,0,0.8);
-    font-family:Arial, Sans-Serif;
-    font-size:20px;
-    text-align:center;
-    line-height:100%;
-    color:#fff;
+
   }
 
-  &:hover {
-    -webkit-transform:translate(50%, -50%) rotate(180deg);
-    transform:translate(50%, -50%) rotate(180deg);
-    background:rgba(0,0,0,1);
-    text-decoration:none;
+  &_close {
+    width: 30px;
+    height: 30px;
+    margin: 20px 20px 0 0;
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transition: ease 0.25s all;
+    transform: translate(50%, -50%);
+    border-radius: 1000px;
+    background: $black_80;
+    font-family: $font_0, $font_1;
+    font-size: 20px;
+    text-align: center;
+    line-height: 100%;
+    color: $white;
+    &:hover {
+      transform: translate(50%, -50%) rotate(180deg);
+      background: $black_100;
+      text-decoration: none;
+    }
   }
 }
