--- a/app/views/generations/new.html.haml
+++ b/app/views/generations/new.html.haml
@@ -1,16 +1,16 @@
 .events-container
-  = form_for(@event) do |f|
-    = label_tag("Nombre del evento", nil, class: ["form__label"])
+  = form_for(@generation) do |f|
+    = label_tag("Nombre del generación", nil, class: ["form__label"])
     = f.text_field :title, class: ["form__input--text"]
-    = label_tag("Descrición del evento", nil, class: ["form__label"])
+    = label_tag("Descrición del generación", nil, class: ["form__label"])
     = f.text_area :description, class: ["form__input--textarea"]
     = label_tag("Collecciones a incluir", nil, class: ["form__label"])
-    = collection_check_boxes(:event, :collections, @collections, :id, :title) do | b|
+    = collection_check_boxes(:generation, :collections, @collections, :id, :title) do | b|
       - unless b.object.photos.empty?
         = b.label(class: ["thumbnail"], style: "background-image: url('#{b.object.photos.last.url}')") {b.check_box + content_tag(:p, b.text, class: 'thumbnail__title')}
       - else
         = b.label(class: ["thumbnail"], style: "background-image: url('http://placepu.gs/500/300')") {b.check_box + content_tag(:p, b.text, class: 'thumbnail__title')}
 
     = button_tag(type: 'submit', class: 'submit') do
-      Crear evento
+      Crear generación
       %span.submit__icon
