--- a/app/views/generations/show.html.haml
+++ b/app/views/generations/show.html.haml
@@ -31,7 +31,7 @@
       %p T:2224596831
       %p @ juan.perez@gmail.com
 
-//Group photo popup
+//Group student popup
 .popup{"data-popup" => "popup-generation"}
   %a.popup_close{"data-popup-close" => "popup-2", :href => "#"} x
   %img.popup_image{:alt => "Imagen de prueba", :src => "http://placepu.gs/500/300"}/
