--- a/app/views/students/index.html.haml
+++ b/app/views/students/index.html.haml
@@ -1,4 +1,4 @@
-- @photos.each do |photo|
+- @students.each do |photo|
   .photo
     = image_tag photo.url, alt: photo.title
     %h2.title #{photo.title}
