--- a/app/views/generations/new.html.haml
+++ b/app/views/generations/new.html.haml
@@ -6,8 +6,8 @@
     = f.text_area :description, class: ["form__input--textarea"]
     = label_tag("Collecciones a incluir", nil, class: ["form__label"])
     = collection_check_boxes(:generation, :groups, @groups, :id, :title) do | b|
-      - unless b.object.photos.empty?
-        = b.label(class: ["thumbnail"], style: "background-image: url('#{b.object.photos.last.url}')") {b.check_box + content_tag(:p, b.text, class: 'thumbnail__title')}
+      - unless b.object.students.empty?
+        = b.label(class: ["thumbnail"], style: "background-image: url('#{b.object.students.last.url}')") {b.check_box + content_tag(:p, b.text, class: 'thumbnail__title')}
       - else
         = b.label(class: ["thumbnail"], style: "background-image: url('http://placepu.gs/500/300')") {b.check_box + content_tag(:p, b.text, class: 'thumbnail__title')}
 
