--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -1,7 +1,7 @@
 .grid-image
     %h2.grid-image__title= @group.title
     - if admin_signed_in?
-        = link_to "Agregar foto", new_collection_photo_path(@group), class: "button button--add"
-    - @group.photos.each do |photo|
+        = link_to "Agregar foto", new_group_student_path(@group), class: "button button--add"
+    - @group.students.each do |photo|
         .grid-image__container
             = image_tag(photo.url, class: "grid-image__container__picture",  alt: photo.title)
