Close #9 Smooth color transition in the navbar based on scroll value

--- a/app/assets/stylesheets/components/molecules/_branding.scss
+++ b/app/assets/stylesheets/components/molecules/_branding.scss
@@ -8,6 +8,16 @@
     position: fixed;
     z-index: 2;
     background: transparent;
+    transition: all 500ms;
+    will-change: background;
+  
+    &--solid {
+      background-color: #F0F0F0;
+      position: fixed;
+      transition: all 500ms;
+      will-change: background;
+
+    }
     
     .no-link {
        text-decoration: none;
