--- a/app/assets/stylesheets/_mosaico.scss
+++ b/app/assets/stylesheets/_mosaico.scss
@@ -21,6 +21,18 @@
         overflow: hidden;
         margin-bottom: 28px;
 
+      display: inline-block;
+
+      &__title {
+        padding-top: 30px;
+        font-size: 1.2em;
+        font-family: futura;
+        font-weigth: bold;
+        text-transform: uppercase;
+        text-align: center;
+        margin-bottom: 35px;
+      }
+
         @include media(min-width 320px max-width 480px) {
             @include span-columns(6);
             margin-bottom: 8px;
