--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,42 +1,48 @@
 .footer{
-  @include row;
-  background-color: #172d25;
+  background-color: #333;
+  position: relative;
   color: #F0F0F0;
   margin-top: 2em;
   left:0px;
   bottom:0px;
-  height: 45px;
+  height: 150px;
   width:100%;
 
   &_about{
     @include span-columns(5);
     @include shift(2);
     padding-left: 2.2em;
+    margin-top: 60px;
 
     &-title{
       font-size: .9em;
       font-weight: 800;
-      margin: .5rem 0 0.3rem;
+      margin-bottom: 15px;
     }
     &-link{
+      display: block;
       color: #F0F0F0;
-      font-size: .8em;
+      margin-bottom: 15px;
+      font-size: .9em;
     }
   }
 
   &_rights{
     @include span-columns(5);
     padding-left: 2.2em;
+    margin-top: 60px;
 
     &-call2action{
       font-size: .9em;
       font-weight: 800;
-      margin: .5rem 0 0.3rem;
+      margin-bottom: 15px;
     }
 
     &-copyright{
+      display: block;
       color: #F0F0F0;
-      font-size: .8em;
+      font-size: .9em;
+      margin-bottom: 15px;
     }
   }
 }
