--- a/app/assets/stylesheets/components/molecules/_login.scss
+++ b/app/assets/stylesheets/components/molecules/_login.scss
@@ -5,7 +5,12 @@
 
   &__action {
       &--profile, &--exit {
-          display: inline-block;
+        display: inline-block;
+        color: #777777;
+        &:visited {
+          color: #777777;
+          text-decoration: none;
+        }
       }
 
       &--profile {
