--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -1,11 +1,11 @@
 .collection-container
-  = form_for @group, action: 'create' do |f|
+  = form_for [@school, @generation, @group], action: 'create' do |f|
     .form_field
-      = label_tag "Nombra la collección", nil, class: ["form__label"], for: "collection_title"
+      = label_tag "Nombre del grupo", nil, class: ["form__label"], for: "collection_title"
       = f.text_field :title, class: ["form__input--text"]
 
     .form_field
-      = label_tag "Cuentanos que se muestra en esta colleción", nil, class: ["form__label"], for: 'collection_description'
+      = label_tag "Cuentanos que se muestra en este grupo", nil, class: ["form__label"], for: 'collection_description'
       = f.text_area :description, class: ["form__input--textarea"]
 
     = button_tag(type: 'submit', class: 'submit') do
