--- a/app/views/students/new.html.haml
+++ b/app/views/students/new.html.haml
@@ -1,11 +1,11 @@
 .photos-container
-  = form_for [@group, @student], action: "create" do |f|
+  = form_for [@school, @generation, @group, @student], action: "create" do |f|
     .form_field
-      = label_tag "Nombre de la fotografia", nil, class: ["form__label"], for: 'photo_title'
+      = label_tag "Nombre del estudiante", nil, class: ["form__label"], for: 'photo_title'
       = f.text_field :title, class: ["form__input--text"]
 
     .form_field
-      = label_tag "Url de la imagen", nil, class: ["form__label"], for: "photo_url"
+      = label_tag "Url de la fotografia", nil, class: ["form__label"], for: "photo_url"
       = f.text_field :url, class: ["form__input--text"]
 
     .form_field
@@ -13,6 +13,6 @@
       = f.text_area :description, class: ["form__input--textarea"]
 
     = button_tag(type: 'submit', class: 'submit') do
-      Agregar foto
+      Agregar alumno
       %span.submit__icon
 
