--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,7 +1,8 @@
 %footer.footer
-  %div.footer_about
-    %h4.footer_about-title Acerca de nosotros
-    %a.footer_about-link{:href => "#"} Contactanos
-  %div.footer_rights
-    %h4.footer_rights-call2action Entra y conocenos
-    %p.footer_rights-copyright ©2017 Cheesy S.A. de C.V. Todos los derechos reservados.
+  = image_tag("isologo--negative.png",  class: 'footer_image')
+  %div.footer_link
+    %a.footer_link-item{:href => "/"} Inicio
+    %a.footer_link-item{:href => "#"} Acerca de nosotros
+    %a.footer_link-item{:href => "#"} Contacto
+    %a.footer_link-item{:href => "#"} Aviso de privacidad
+    %a.footer_rights-copyright | ©2017 Cheesy
