--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -9,7 +9,7 @@
         %p.login__action--profile= "Hola #{current_admin.email}"
         = link_to("Salir", destroy_admin_session_path, method: :delete, class: ['login__action--exit'])
       - else
-        = link_to("Login",  new_admin_session_path, class: ['login__action--exit'])
+        = link_to("Entrar",  new_admin_session_path, class: ['login__action--exit'])
 %button.c-hamburger.c-hamburger--rot
   .span toggle menu
 /
